# comdirect-to-ynab

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  comdirect.rs  commands.rs  config.rs  main.rs  op.rs  paths.rs  paypal.rs  prompt.rs  state.rs  ynab.rs
