[package]
name = "comdirect-ynab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.34", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "v5"] }
idna = "=0.5.0"
indexmap = "=2.2.6"
url = "=2.4.1"
